--- a/client/src/components/header/headerStyle.css
+++ b/client/src/components/header/headerStyle.css
@@ -1,5 +1,9 @@
 .header {
-  height: 75px;
+  height: 100px;
   background-color: black;
   color: white;
+}
+
+.optionlistContainer {
+  margin-left: auto;
 }
