--- a/client/src/components/footer/footerStyle.css
+++ b/client/src/components/footer/footerStyle.css
@@ -1,5 +1,9 @@
 .footer {
   height: 200px;
-  background-color: black;
+  background-color: #212e53;
   color: white;
+  /* background: no-repeat url("../images/stars.png");
+  background-size: cover; */
+  background: #230024;
+background: linear-gradient(90deg, rgba(35, 0, 36, 1) 0%, rgba(76, 76, 140, 1) 100%, rgba(0, 212, 255, 1) 0%);
 }
