--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,36 @@
+/*
+#ce6a6b
+#ebaca2
+#bed3c3
+#4a919e
+#212e53
+*/
+
 * {
   margin: 0;
   padding: 0;
   
   font-family: "SUSE", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+  font-weight: 100;
+}
+
+@media (min-width: 1200px) {
+  .container{
+      max-width: 1200px !important;
+  }
+}
+
+body {
+  background: black;
+  background-size: cover;
+  background: no-repeat url("../images/starcraft-wallpapper.jpg") fixed;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.customButton {
+  font-size: 30px !important;
+  border: solid white 1px !important;
+  background: linear-gradient(90deg, rgba(35, 0, 36, 1) 0%, rgba(76, 76, 140, 1) 100%, rgba(0, 212, 255, 1) 0%) !important;
 }
