--- a/client/src/components/header/headerStyle.css
+++ b/client/src/components/header/headerStyle.css
@@ -15,13 +15,17 @@
   margin-left: auto;
 }
 
-.header,
-a {
-  text-decoration: none !important;
-  color: white !important;
-}
+.headerOption{
+  a {
+    text-decoration: none !important;
+    color: white !important;
+    transition: .4s;
+  }
+} 
 
-.header,
-a:hover {
-  color: rgb(255, 255, 255, 0.3) !important;
+.headerOption {
+  a:hover {
+    color: rgba(255,255, 255, 0.5) !important;
+    transform: scale(1.05) !important;
+  }
 }
